<resources>
    <string name="app_name">Criar Lista</string>
    <string name="app_add_task">Criar Nota</string>
    <string name="app_list">Lista de Anotações</string>
    <string name="app_list_input_title">Título</string>
    <string name="app_list_input_descricao">Descrição</string>
    <string name="app_list_input_pre">Data Inicial</string>
    <string name="app_list_input_pos">Data Final</string>
    <string name="app_list_input_hpre">Hora Inicial</string>
    <string name="app_list_input_hpos">Hora Final</string>
    <string name="app_btn_criar_nota">Criar Nota</string>
    <string name="app_btn_cancelar_nota">Cancelar</string>
    <string name="app_btn_criar_nota_description">Adicionar nova nota</string>
    <string name="label_inicio">Inicial</string>
    <string name="label_final">Final</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_edit">Editar</string>
    <string name="empty_note">Ops!! Nenhuma nota para exibir aqui!</string>
</resources>