<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/criarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_add_task"
        app:navigationIcon="@drawable/ic_navigate_before_24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="36dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/app_list_input_title"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/criarNota">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/criarNotaTitulo"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescricao"
        android:layout_width="0dp"
        android:minHeight="@android:dimen/thumbnail_height"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/app_list_input_descricao"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/tilTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/criarNotaDescricao"
            android:inputType="textLongMessage"
            android:layout_width="match_parent"
            android:minHeight="@android:dimen/thumbnail_height"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDataPre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/tilHourPre"
        app:layout_constraintTop_toBottomOf="@id/tilDescricao">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:drawableStart="@drawable/ic_baseline_date_24"
            android:hint="@string/app_list_input_pre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHourPre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tilDataPre"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/tilDataPre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHPre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:drawableStart="@drawable/ic_baseline_time_24"
            android:hint="@string/app_list_input_hpre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDataPos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/tilHourPos"
        app:layout_constraintTop_toBottomOf="@id/tilDataPre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_date_24"
            android:inputType="date"
            android:hint="@string/app_list_input_pos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilHourPos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tilDataPos"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/tilDataPos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHPos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:drawableStart="@drawable/ic_baseline_time_24"
            android:hint="@string/app_list_input_hpos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCancelarNota"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@id/mbCriarNota"
        android:text="@string/app_btn_cancelar_nota"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbCriarNota"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/app_btn_criar_nota"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>